Fixed landscape mode

--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -9,10 +9,6 @@
         android:id="@+id/main_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context=".MainActivity" >
 
         <ProgressBar
@@ -24,38 +20,63 @@
             android:layout_centerVertical="true"
             android:indeterminate="true" />
 
-        <TextView
-            android:id="@+id/main_percentage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:gravity="right"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility="invisible" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/generated_content"
+            android:orientation="horizontal"
+            android:visibility="invisible" >
 
-        <com.androidplot.xy.XYPlot
-            android:id="@+id/main_xyplot_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/main_percentage"
-            androidPlot.domainLabel="XAXIS"
-            androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
-            androidPlot.graphWidget.gridLinePaint.color="#000000"
-            androidPlot.graphWidget.marginBottom="25dp"
-            androidPlot.graphWidget.marginLeft="15dp"
-            androidPlot.graphWidget.marginRight="10dp"
-            androidPlot.graphWidget.marginTop="20dp"
-            androidPlot.legendWidget.heightMetric.value="25dp"
-            androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
-            androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
-            androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
-            androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
-            androidPlot.rangeLabel="YAXIS"
-            androidPlot.title="TITLE"
-            androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
-            android:gravity="left"
-            android:visibility="invisible" />
+            <com.androidplot.xy.XYPlot
+                android:id="@+id/main_xyplot_main_main"
+                style="@style/GraphStyle"
+                android:gravity="left"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                
+                androidPlot.domainLabel="@string/graph_x_axis"
+                androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
+                
+                androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
+                androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
+                androidPlot.graphWidget.marginBottom="25dp"
+                androidPlot.graphWidget.marginLeft="20dp"
+                androidPlot.graphWidget.marginRight="10dp"
+                androidPlot.graphWidget.marginTop="20dp"
+                androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
+                androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
+                
+                androidPlot.legendWidget.heightMetric.value="25dp"
+                androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
+                androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
+                androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
+                androidPlot.legendWidget.textPaint.textSize="10dp"
+                
+                androidPlot.rangeLabel="@string/graph_y_axis"
+                androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
+                
+                androidPlot.title="@string/graph_title"
+                androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size" />
+            <!--
+             DO NOT ADD androidPlot.renderMode="use_background_thread"
+        	 Seeems like a good idea right?! No, it breaks the graph... Wishlist: XML documentation -->
+
+            <TextView
+                android:id="@+id/main_percentage"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="30sp"
+                android:textColor="#FFFFFF" />
+            <!-- Why are weights opposite.... FIXME? 
+            	Quite the magic number too...-->
+
+        </LinearLayout>
+        
+
     </RelativeLayout>
     <!-- The navigation drawer -->
 
@@ -64,8 +85,6 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
 
